fixed page media settings and added more work sections, fixed spacing between divs and cleaned up css

--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,11 @@ ul {
 a { 
     text-decoration: none;
 }
-section {
+header {
     width:100%;
-    height: 95vh;
     background-color: gray
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
 }
 nav {
     display: flex;
@@ -29,15 +27,11 @@ nav {
     background-color: #FFFFFF;
     box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
     padding: 0px 5%;
-    /* flex-shrink: 1;
-    flex-wrap: nowrap;
-    flex-direction: inherit; */
 }
 
 nav ul {
 display: flex;
 flex-shrink: 0;
-/* need to figure out how to make text smaller */
 
 }
 nav ul li a {
@@ -60,7 +54,7 @@ nav ul li a {
 
 }
 
-/* about me container */
+/* text me container */
 .text-container p:nth-child(1) {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
@@ -87,10 +81,8 @@ nav ul li a {
 }
 
 .text-container{
-    position: absolute;
-    left:13%;
-    top:42%;
-    transform: translate(-13%,-42%);
+    margin-left: 1%;
+    padding-bottom: 2rem;
 }
 
 .text-container button{
@@ -113,10 +105,6 @@ nav ul li a {
     border: 2px solid #373636
     color: #373636;
 } 
-/* background-color: #0b0b0b;
-    color: #FFFFFF;
-    border: none; */
-
 
 button:active{
     transform: scale(1,1);
@@ -133,14 +121,15 @@ background image
 } */
 
 .about-me-container {
+    margin: auto;
+    margin-top: 1rem;
     width: 80%;
     height: 330px;
     background-color:#FFFFFF ;
     border-radius: 20px;
     box-shadow: 2px 2px 12px rgb(91, 211, 21);
     display: flex;
-    margin: auto;
-    position: relative;
+    /* position: relative; */
     justify-content: space-evenly;
     align-items: center;
 }
@@ -202,7 +191,7 @@ background image
     box-shadow: 2px 2px 12px rgb(91, 211, 21);
     display: flex;
     margin: auto;
-    position: relative;
+    /* position: relative; */
     justify-content: space-evenly;
     align-items: center;
 }
@@ -253,25 +242,35 @@ background image
     background-color: #262525;
 }
 
+/* center on regular css */
+.contact-me-container p{
+    text-align: center;  
+    font-size: 26px;
+   }
+   .contact-me-container button{
+    text-align: center;   
+    font-size: 14px;
+    height:35px;
+    width: 160px;
+   }
 
-
-
+   .contact-me-container{
+    text-align: center;  
+    height: 200px;
+   }
 
 
 
 /* media viewss 1000*/
-@media(max-width:1000px){
-    *{
-     box-sizing: border-box;
+@media screen and (max-width:1000px){
+*{
+    box-sizing: border-box;
     }
     /* .model{
      height: 460px;
      left: 90%;
      transform: translateX(-90%);
     } */
-    .text-container{
-     top:46%;
-    }
     .text-container button{
      margin: 5px;
     }
@@ -301,98 +300,25 @@ background image
     width: 400px;
    }
 
-   .contact-me{
+   .contact-me-container{
+    text-align: center;  
     height: 200px;
    }
-   .contact-me p{
+   .contact-me-container p{
+    text-align: center;  
     font-size: 26px;
    }
-   .contact-me button{
+   .contact-me-container button{
+    text-align: center;   
     font-size: 14px;
     height:35px;
     width: 160px;
    }
-   /* .work-text p:nth-child(1){ 
-    font-size: 20px;
-   }
-   .work-text p:nth-child(2){
-    font-size: 10px;
-   }
-   
-   .work-text p:nth-child(3),
-   .work-text p:nth-child(4){
-    font-size: 14px;
-   }
-/*  */
 
+}
 
-/* workk media */
-    /* *{
-        box-sizing: border-box;
-       }
-       /* .model{
-        height: 460px;
-        left: 90%;
-        transform: translateX(-90%);
-       } */
-       /* .work-container{
-        top:46%;
-       }
-       .work-container button{
-        margin: 5px;
-       }
-       .work-container{
-        width:90%;
-        border-radius: 10px;
-       }
-       .work-container img{
-        height: 200px;
-       }
-       .work-text{
-        width: 400px;
-       }
-       .work-text p:nth-child(1){
-        font-size: 20px;
-       }
-       .work-text p:nth-child(2){
-        font-size: 10px;
-       }
-       
-       .work-text p:nth-child(3),
-       .work-text p:nth-child(4){
-        font-size: 14px;
-       } */ 
-
-    /* extra commands for media
-    
-    .services{
-     padding: 2% 5% 0px 5%;
-    }
-    .box-container{
-     justify-content: center;
-     flex-wrap: wrap;
-    }
-    .services{
-     height: auto;
-    }
-    .box-1,.box-2,.box-3{
-     flex-grow: 1;
-     margin: 10px;
-    }
-    .contact-me{
-     height: 200px;
-    }
-    .contact-me p{
-     font-size: 26px;
-    }
-    .contact-me button{
-     font-size: 14px;
-     height:35px;
-     width: 160px;
-    } */
-   }
-   @media(max-width:750px){
-    section{
+@media screen and (max-width:768px){
+    header{
      background-image:none;
      background-color:#f7f7f7;
     }
@@ -404,15 +330,7 @@ background image
     }
     .text-container {
      line-height: 40px;
-     margin: 0px;
-     padding: 0px;
      
-    }
-    .text-container{
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%,-50%);
-     width: 80%;
     }
     .about-me-container{
         top: 0px;
@@ -434,28 +352,13 @@ background image
     nav ul{
      margin: 0px;
      padding: 0px;
-     background-color: #ebeef4;
-     flex-direction: column;
-     position: fixed;
-     left: 0;
-     top: 0;
-     width:100%;
-     height: 100vh;
-     box-sizing: border-box;
      display: flex;
      justify-content: center;
      align-items: center;
      z-index: 1;
-     display: none;
      
     }
-    nav ul li{
-     padding: 10px;
-    }
     nav ul li a{
-     font-family: calibri;
-     font-size: 1.4em;
-     text-transform: uppercase;
      color:#5c5c5c;
     }
     nav ul li a:hover{
@@ -476,7 +379,7 @@ background image
     }
     nav.active ul{
      display: flex !important;
-    }
+        }
 
     .contact-me{
         height: 180px;
@@ -489,58 +392,8 @@ background image
         height: 33px;
        }
        footer p:nth-child(2){
+        position: fixed;
         width: 90%;
        }
 
 }
-/* work media700 */
-/* section{
-    background-image:none;
-    background-color:#f7f7f7;
-   }
-    .work-container {
-        line-height: 40px;
-        margin: 0px;
-        padding: 0px;
-        
-       }
-       .work-container{
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        width: 80%;
-       }
-       .work-container{
-           top: 0px;
-           flex-direction: column;
-           width:90%;
-           height: auto;
-           padding: 30px 0px;
-           align-items: center;
-          }
-          .work-text{
-           width:90%;
-           text-align: center;
-          } */
-    
-    /* EXTRA MEDIA COMMANDS/////
-
-
-    .services-text{
-     width: 100%;
-    }
-    .contact-me{
-     height: 180px;
-    }
-    .contact-me p{
-     font-size: 18px;
-    }
-    .contact-me button{
-     width: 150px;
-     height: 33px;
-    }
-    footer p:nth-child(2){
-     width: 90%;
-    } */
-    
-  /* foooterr and contact meeeee */
